# screen-recorder-ffmpeg-cpp

./: CMakeLists.txt  README.md  ScreenRecorder  compile.sh  main.cpp  techstack.md  techstack.yml
include/: RecordManager.h  ScreenRecord.h  ScreenRecorder.h
src/: RecordManager.cpp  ScreenRecord.cpp  ScreenRecorder.cpp
